# Signal

./: .gitignore  DEPLOY.md  README.md  docker-compose.yml  render.yaml
backend/: .env.example  pyproject.toml  requirements.txt  test_yf.py
backend/app/: main.py
backend/app/api/endpoints/: setup.py  signals.py
backend/app/core/: config.py
backend/app/db/: models.py
backend/app/schemas/: market_data.py
backend/app/services/: asset_context.py  candle_aggregator.py  connection_manager.py  connector_interface.py  data_validator.py  decision_engine.py  expert_engine.py  feature_engine.py  market_hours.py  market_levels.py  market_predictor.py  regime_classifier.py
backend/app/services/connectors/: binance_connector.py  yfinance_connector.py
