[tool.poetry]
name = "nifty-options-console-backend"
version = "0.1.0"
description = "Backend for Market Signal Console (Free Data Edition)"
authors = ["Antigravity <antigravity@deepmind.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
celery = "^5.3.6"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
pandas = "^2.2.0"
websockets = "^12.0"
yfinance = "^0.2.36"
ccxt = "^4.2.0"
scikit-learn = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
